
set(SRC
abbrampsfacctEW1.F
abbrampsfacctEW3.F
abbrampsfacctEW5.F
abbrampsfacctQCD1.F
abbrampsfacctQCD2.F
abbrampsfacctQCD3.F
abbrampsfacctQCD4.F
abbrampsfacctQCD5.F
abbrborn1.F
abbrborn2.F
abbrborn3.F
abbrborn4.F
abbrborn5.F
abbrconst.F
abbrrealQED10.F
abbrrealQED11.F
abbrrealQED12.F
abbrrealQED13.F
abbrrealQED14.F
abbrrealQED15.F
abbrrealQED16.F
abbrrealQED17.F
abbrrealQED18.F
abbrrealQED19.F
abbrrealQED1.F
abbrrealQED20.F
abbrrealQED21.F
abbrrealQED22.F
abbrrealQED23.F
abbrrealQED24.F
abbrrealQED25.F
abbrrealQED26.F
abbrrealQED27.F
abbrrealQED28.F
abbrrealQED29.F
abbrrealQED2.F
abbrrealQED30.F
abbrrealQED31.F
abbrrealQED3.F
abbrrealQED4.F
abbrrealQED5.F
abbrrealQED6.F
abbrrealQED7.F
abbrrealQED8.F
abbrrealQED9.F
abbrvirtEW1.F
abbrvirtEW3.F
abbrvirtEW5.F
abbrvirtQCD1.F
abbrvirtQCD2.F
abbrvirtQCD3.F
abbrvirtQCD4.F
abbrvirtQCD5.F
ampsfacctEW1.F
ampsfacctEW2.F
ampsfacctEW3.F
ampsfacctEW4.F
ampsfacctEW5.F
ampsfacctQCD1.F
ampsfacctQCD2.F
ampsfacctQCD3.F
ampsfacctQCD4.F
ampsfacctQCD5.F
born1.F
born2.F
born3.F
born4.F
born5.F
kinematics.F
loop_interface.F
realQED10.F
realQED11.F
realQED12.F
realQED13.F
realQED14.F
realQED15.F
realQED16.F
realQED17.F
realQED18.F
realQED19.F
realQED1.F
realQED20.F
realQED21.F
realQED22.F
realQED23.F
realQED24.F
realQED25.F
realQED26.F
realQED27.F
realQED28.F
realQED29.F
realQED2.F
realQED30.F
realQED31.F
realQED3.F
realQED4.F
realQED5.F
realQED6.F
realQED7.F
realQED8.F
realQED9.F
squaredME.F
virtEW1.F
virtEW2.F
virtEW3.F
virtEW4.F
virtEW5.F
virtQCD1.F
virtQCD2.F
virtQCD3.F
virtQCD4.F
virtQCD5.F
)

include_directories(${COLLIER_INCLUDE_DIR})

set (CMAKE_Fortran_FLAGS_DEBUG ${CMAKE_Fortran_FLAGS} "-g")
set (CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS} "-O2 -ffixed-line-length-200 -xf77-cpp-input -fno-align-commons")

add_library(wjvirtual ${SRC})
target_link_libraries(wjvirtual  collier)
set_property(TARGET wjvirtual PROPERTY FOLDER "processes/wj/me/virtual")
